--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     sdk.each { file ->
         if (!file.exists()) {
             println 'Getting the SDK jar from CENTRAL Repo.'
-            compile 'com.sciul:sci-sdk-java:1.0.41-SNAPSHOT'
+            compile 'com.sciul:sci-sdk-java:1.0.44-SNAPSHOT'
         }else{
            println 'Getting the SDK jar from LOCAL Repo.'
            compile sdk
@@ -123,6 +123,11 @@ def getPomSignature = {
     return project.tasks.signPom.signatureFiles.collect{it}[0]
 }
 
+jar.doFirst{
+     sourceSets.main.java.srcDirs.each {
+        from it
+     }
+}
 
 jar {
     manifest {
