--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.apache.httpcomponents:httpmime:4.4-alpha1'
     compile 'javax.xml:jaxb-api:2.1'
+    compile 'com.amazonaws:aws-java-sdk:1.9.13'    
 
     testCompile 'junit:junit:4.10'
 }
