--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ if (project.hasProperty("VERSION")) {
 }
 
 sourceCompatibility = 1.7
-version = "$versionN"+'-SNAPSHOT'
+version = "$versionN"
 group = 'com.sciul'
 
 repositories {
