--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ repositories {
       maven {
         url "http://repo.spring.io/libs-snapshot"
       }
+      maven {
+          url "https://nexus.sciul.com/nexus/content/groups/public"
+      }
 }
 
 buildscript {
@@ -47,7 +50,7 @@ dependencies {
     sdk.each { file ->
         if (!file.exists()) {
             println 'Getting the SDK jar from CENTRAL Repo.'
-            compile 'com.sciul:sci-sdk-java:1.0.104-SNAPSHOT'
+            compile 'com.sciul:sci-sdk-java:2.0.0'
         }else{
            println 'Getting the SDK jar from LOCAL Repo.'
            compile sdk
