--- a/build.gradle
+++ b/build.gradle
@@ -137,7 +137,7 @@ uploadArchives {
 			     authentication(userName: sonatypeUsername, password: sonatypePassword)
 			}
 			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-                authentication(userName: nexusUsername, password: nexusPassword)
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
 			pom.project {
 				name 'recurly-sdk-java'
