--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ repositories {
       maven {
         url "http://repo.spring.io/libs-snapshot"
       }
+      maven {
+       url "https://nexus.sciul.com/nexus/content/groups/public"
+      }
 }
 
 buildscript {
@@ -124,65 +127,15 @@ jar {
 test {
     systemProperties 'property': 'value'
 }
-
-
-
 uploadArchives {
-	repositories {
-		mavenDeployer {
-			beforeDeployment { 
-			     MavenDeployment deployment -> signing.signPom(deployment) 
-			}
-			repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-			     authentication(userName: sonatypeUsername, password: sonatypePassword)
-			}
-			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-                authentication(userName: sonatypeUsername, password: sonatypePassword)
+    repositories {
+        mavenDeployer {
+            repository(url: "${nexusUrl}/content/repositories/releases") {
+                authentication(userName: nexusUsername, password: nexusPassword)
             }
-			pom.project {
-				name 'recurly-sdk-java'
-				packaging 'jar'
-				description 'SDK Classes to build Recurly Java app.'
-				url 'https://github.com/ulini/recurly-sdk-java'
-				scm {
-					url 'scm:git@github.com:ulini/recurly-sdk-java.git'
-					connection 'scm:git@github.com:ulini/recurly-sdk-java.git'
-					developerConnection 'scm:git@github.com:ulini/recurly-sdk-java.git'
-				}
-				licenses {
-					license {
-						name 'The Apache Software License, Version 2.0'
-						url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-						distribution 'repo'
-					}
-				}
-				developers {
-					developer {
-						id 'SR'
-						name 'sr'
-					}
-					developer {
-						id 'GC'
-						name 'gc'
-					}
-					developer {
-						id 'SB'
-						name 'sb'
-					}
-					developer {
-						id 'PM'
-						name 'pm'
-					}
-					developer {
-						id 'LK'
-						name 'lk'
-					}
-					developer {
-						id 'GS'
-						name 'gs'
-					}
-				}
-			}
-		}
-	}
+            snapshotRepository(url: "${nexusUrl}/content/repositories/snapshots") {
+                authentication(userName: nexusUsername, password: nexusPassword)
+            }
+        }
+    }
 }
